make default image cirno and disable search button until page init is complete

--- a/XAU/Views/Pages/MiscPage.xaml
+++ b/XAU/Views/Pages/MiscPage.xaml
@@ -153,6 +153,7 @@
                        HorizontalAlignment="Right"
                        VerticalAlignment="Stretch"
                        Margin="25,0,0,0"
+                       IsEnabled="{Binding ViewModel.IsInitialized}"
                        Command="{Binding ViewModel.SearchGamertagCommand}"></ui:Button>
                                         <ui:TextBox
                        x:Name="GamertagSearchBox"
