--- a/XAU/Views/Pages/SettingsPage.xaml
+++ b/XAU/Views/Pages/SettingsPage.xaml
@@ -15,84 +15,228 @@
     ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     mc:Ignorable="d">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
-        <CheckBox
-            Grid.Column="0"
-            Margin="5,0,5,0"
-            VerticalAlignment="Center"
-            Content="Enable Unlock All"
-            IsChecked="{Binding ViewModel.UnlockAllEnabled, Mode=TwoWay}"
-            Command="{Binding ViewModel.SaveSettingsCommand}"></CheckBox>
-        <CheckBox
-            Grid.Column="1"
-            Margin="5,0,5,0"
-            VerticalAlignment="Center"
-            Content="Enable Auto Spoofer"
-            IsChecked="{Binding ViewModel.AutoSpooferEnabled, Mode=TwoWay}"
-            Command="{Binding ViewModel.SaveSettingsCommand}"></CheckBox>
-        <CheckBox
-            Grid.Column="2"
-            Margin="5,0,5,0"
-            VerticalAlignment="Center"
-            Content="Auto Launch Xbox App"
-            IsChecked="{Binding ViewModel.AutoLaunchXboxAppEnabled, Mode=TwoWay}"
-            Command="{Binding ViewModel.SaveSettingsCommand}"></CheckBox>
-        <CheckBox
-            Grid.Column="3"
-            Margin="5,0,5,0"
-            VerticalAlignment="Center"
-            Content="Use Fake Signature"
-            IsChecked="{Binding ViewModel.FakeSignatureEnabled, Mode=TwoWay}"
-            Command="{Binding ViewModel.SaveSettingsCommand}"></CheckBox>
-        <CheckBox
-            Grid.Row="1"
-            Margin="5,0,5,0"
-            VerticalAlignment="Center"
-            Content="Enable Privacy Mode"
-            IsChecked="{Binding ViewModel.PrivacyMode, Mode=TwoWay}"
-            Command="{Binding ViewModel.SaveSettingsCommand}"></CheckBox>
-        <CheckBox
-            Grid.Row="1"
-            Grid.Column="1"
-            Margin="5,0,5,0"
-            VerticalAlignment="Center"
-            Content="Use Acrylic Background"
-            IsChecked="{Binding ViewModel.UseAcrylic, Mode=TwoWay}"
-            Command="{Binding ViewModel.SaveSettingsCommand}"
-            IsEnabled="False"></CheckBox>
-        <CheckBox
-            Grid.Row="1"
-            Grid.Column="2"
-            Margin="5,0,5,0"
-            VerticalAlignment="Center"
-            Content="Force English"
-            IsChecked="{Binding ViewModel.RegionOverride, Mode=TwoWay}"
-            Command="{Binding ViewModel.SaveSettingsCommand}"
-            IsEnabled="True"></CheckBox>
-        <ui:TextBox
-            x:Name="XauthTextBox"
-            Grid.Column="3"
-            Grid.Row="1"
-            Text="{Binding ViewModel.Xauth, Mode=TwoWay}"
-            TextChanged="XauthTextBox_OnTextChanged"
-            PlaceholderText="XAUTH Token"></ui:TextBox>
-        <ui:TextBox
-            x:Name="EventsTokenBox"
-            Grid.Column="0"
-            Grid.Row="2"
-            TextChanged="EventsToken_OnTextChanged"
-            PlaceholderText="Events Token"></ui:TextBox>
-    </Grid>
+    <StackPanel CanHorizontallyScroll="False">
+        <ui:TextBlock FontTypography="Title"
+                      Text="Settings"
+                      Margin="4"
+                      HorizontalAlignment="Left"/>
+        <ui:CardControl Margin="4, 2">
+            <ui:CardControl.Header>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <ui:TextBlock
+                        Grid.Row="0"
+                        FontTypography="Body"
+                        Text="Enable Unlock All" 
+                        TextWrapping="WrapWithOverflow"/>
+                    <ui:TextBlock
+                        Grid.Row="1"
+                        Foreground="{ui:ThemeResource TextFillColorSecondaryBrush}"
+                        Text="Enables the functionality of the Unlock All button in the Achievements page." 
+                        TextWrapping="WrapWithOverflow"/>
+                </Grid>
+            </ui:CardControl.Header>
+            <ui:ToggleSwitch IsChecked="{Binding ViewModel.UnlockAllEnabled, Mode=TwoWay}"
+                             Command="{Binding ViewModel.SaveSettingsCommand}"/>
+        </ui:CardControl>
+        <ui:CardControl Margin="4, 2">
+            <ui:CardControl.Header>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <ui:TextBlock
+                        Grid.Row="0"
+                        FontTypography="Body"
+                        Text="Enable Auto Spoofer" 
+                        TextWrapping="WrapWithOverflow"/>
+                    <ui:TextBlock
+                        Grid.Row="1"
+                        Foreground="{ui:ThemeResource TextFillColorSecondaryBrush}"
+                        Text="Hide your profile info in the home page. Requires a refresh if info is already grabbed." 
+                        TextWrapping="WrapWithOverflow"/>
+                </Grid>
+            </ui:CardControl.Header>
+            <ui:ToggleSwitch IsChecked="{Binding ViewModel.AutoSpooferEnabled, Mode=TwoWay}"
+                             Command="{Binding ViewModel.SaveSettingsCommand}"/>
+        </ui:CardControl>
+        <ui:CardExpander Margin="4, 2">
+            <ui:CardExpander.Header>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <ui:TextBlock
+                        Grid.Row="0"
+                        FontTypography="Body"
+                        Text="Xbox App Launch Settings"
+                        TextWrapping="WrapWithOverflow" />
+                    <ui:TextBlock
+                        Grid.Row="1"
+                        Foreground="{ui:ThemeResource TextFillColorSecondaryBrush}"
+                        Text="Configure how the Xbox app launches and behaves on startup." 
+                        TextWrapping="WrapWithOverflow"/>
+                </Grid>
+            </ui:CardExpander.Header>
+            <StackPanel>
+                <ui:Anchor
+                    Margin="-16 -16 -16 0"
+                    Padding="16"
+                    HorizontalAlignment="Stretch"
+                    HorizontalContentAlignment="Stretch"
+                    Background="Transparent"
+                    BorderThickness="0,1,0,1">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Grid.Column="0" Text="Auto Launch Xbox App" />
+                        <ui:ToggleSwitch Grid.Column="1" 
+                                         IsChecked="{Binding ViewModel.AutoLaunchXboxAppEnabled, Mode=TwoWay}"
+                                         Command="{Binding ViewModel.SaveSettingsCommand}"/>
+                    </Grid>
+                </ui:Anchor>
+                <ui:Anchor
+                    Margin="-16 0 -16 -16"
+                    Padding="16"
+                    HorizontalAlignment="Stretch"
+                    HorizontalContentAlignment="Stretch"
+                    Background="Transparent"
+                    BorderThickness="0,1,0,1">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Grid.Column="0" 
+                                   Text="Launch Hidden"/>
+                        <ui:ToggleSwitch Grid.Column="1" 
+                                         IsEnabled="{Binding ViewModel.AutoLaunchXboxAppEnabled, Mode=OneWay}"
+                                         IsChecked="{Binding ViewModel.LaunchHidden, Mode=TwoWay}"
+                                         Command="{Binding ViewModel.SaveSettingsCommand}"/>
+                    </Grid>
+                </ui:Anchor>
+            </StackPanel>
+        </ui:CardExpander>
+        <ui:CardControl Margin="4, 2">
+            <ui:CardControl.Header>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <ui:TextBlock
+                        Grid.Row="0"
+                        FontTypography="Body"
+                        Text="Use Fake Signature" 
+                        TextWrapping="WrapWithOverflow"/>
+                    <ui:TextBlock
+                        Grid.Row="1"
+                        Foreground="{ui:ThemeResource TextFillColorSecondaryBrush}"
+                        Text="Send a static string as the signature value or omit it when unlocking achievements." 
+                        TextWrapping="WrapWithOverflow"/>
+                </Grid>
+            </ui:CardControl.Header>
+            <ui:ToggleSwitch IsChecked="{Binding ViewModel.FakeSignatureEnabled, Mode=TwoWay}"
+                             Command="{Binding ViewModel.SaveSettingsCommand}"/>
+        </ui:CardControl>
+        <ui:CardControl Margin="4, 2">
+            <ui:CardControl.Header>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <ui:TextBlock
+                        Grid.Row="0"
+                        FontTypography="Body"
+                        Text="Privacy Mode" 
+                        TextWrapping="WrapWithOverflow"/>
+                    <ui:TextBlock
+                        Grid.Row="1"
+                        Foreground="{ui:ThemeResource TextFillColorSecondaryBrush}"
+                        Text="Hide your profile info in the home page. Requires a refresh if info is already grabbed." 
+                        TextWrapping="WrapWithOverflow"/>
+                </Grid>
+            </ui:CardControl.Header>
+            <ui:ToggleSwitch IsChecked="{Binding ViewModel.PrivacyMode, Mode=TwoWay}"
+                             Command="{Binding ViewModel.SaveSettingsCommand}"/>
+        </ui:CardControl>
+        <ui:CardControl Margin="4, 2">
+            <ui:CardControl.Header>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <ui:TextBlock
+                        Grid.Row="0"
+                        FontTypography="Body"
+                        Text="Force English" 
+                        TextWrapping="WrapWithOverflow"/>
+                    <ui:TextBlock
+                        Grid.Row="1"
+                        Foreground="{ui:ThemeResource TextFillColorSecondaryBrush}"
+                        Text="Uses the en-gb region when making web requests to the Xbox API's." 
+                        TextWrapping="WrapWithOverflow"/>
+                </Grid>
+            </ui:CardControl.Header>
+            <ui:ToggleSwitch IsChecked="{Binding ViewModel.RegionOverride, Mode=TwoWay}"
+                             Command="{Binding ViewModel.SaveSettingsCommand}"/>
+        </ui:CardControl>
+        <ui:CardControl Margin="4, 2"
+                        SizeChanged="XAuthBox_OnSizeChanged">
+            <ui:CardControl.Header>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <ui:TextBlock
+                        Grid.Row="0"
+                        FontTypography="Body"
+                        Text="XAuth Token" 
+                        TextWrapping="WrapWithOverflow"/>
+                    <ui:TextBlock
+                        Grid.Row="1"
+                        Foreground="{ui:ThemeResource TextFillColorSecondaryBrush}"
+                        Text="Token authorizing app access without username/password, expires in 24 hours." 
+                        TextWrapping="WrapWithOverflow"/>
+                </Grid>
+            </ui:CardControl.Header>
+            <ui:TextBox 
+                x:Name="XauthTextBox"
+                TextChanged="XauthTextBox_OnTextChanged"/>
+        </ui:CardControl>
+        <ui:CardControl Margin="4, 2"
+                        SizeChanged="EventsBoxGrid_OnSizeChanged">
+            <ui:CardControl.Header>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <ui:TextBlock
+                        Grid.Row="0"
+                        FontTypography="Body"
+                        Text="Events Token" 
+                        TextWrapping="WrapWithOverflow"/>
+                    <ui:TextBlock
+                        Grid.Row="1"
+                        Foreground="{ui:ThemeResource TextFillColorSecondaryBrush}"
+                        Text="An account token for interacting with event-based activities, expiring 24 hours after creation." 
+                        TextWrapping="WrapWithOverflow"/>
+                </Grid>
+            </ui:CardControl.Header>
+            <ui:TextBox 
+                x:Name="EventsTokenBox"
+                TextChanged="EventsToken_OnTextChanged"/>
+        </ui:CardControl>
+    </StackPanel>
 </Page>
