--- a/XAU/Views/Pages/MiscPage.xaml
+++ b/XAU/Views/Pages/MiscPage.xaml
@@ -182,13 +182,21 @@
                             <Label Content="{Binding ViewModel.GamertagName}" Margin="0,0,0,5" />
                             <Label Content="{Binding ViewModel.GamertagScore}" Margin="0,0,0,5" />
                             <TextBlock Text="XUID: " VerticalAlignment="Center" Margin="0,0,5,0" />
-                                <TextBox Text="{Binding ViewModel.GamertagXuid, Mode=OneWay}" Margin="0,0,0,5" IsReadOnly="True" />
+                            <TextBox Text="{Binding ViewModel.GamertagXuid, Mode=OneWay}" Margin="0,0,0,5" IsReadOnly="True" />
+                            <ui:ToggleSwitch
+                            x:Name="ExcludeZeroGamerscoreToggle"
+                            Grid.Row="0"
+                            Grid.Column="0"
+                            Margin="0,10,0,10"
+                            Content="Exclude 0 Gamerscore Games"
+                            IsChecked="{Binding ViewModel.ExcludeZeroGamerscoreGames, Mode=TwoWay}" />
                             <ui:Button
                             x:Name="ExportButton"
                             IsEnabled="{Binding ViewModel.IsInitialized}"
                             Content="Export Games to CSV"
                             Icon="{ui:SymbolIcon Save24}"
                             Click="ExportToCsvButton_Click"/>
+                            
                         </StackPanel>
                     </StackPanel>
                 </Grid>
