--- a/XAU/Views/Pages/MiscPage.xaml
+++ b/XAU/Views/Pages/MiscPage.xaml
@@ -190,13 +190,19 @@
                             Margin="0,10,0,10"
                             Content="Exclude 0 Gamerscore Games"
                             IsChecked="{Binding ViewModel.ExcludeZeroGamerscoreGames, Mode=TwoWay}" />
+                            <ui:ToggleSwitch
+                            x:Name="ExcludeXbox360GamesToggle"
+                            Grid.Row="0"
+                            Grid.Column="0"
+                            Margin="0,5,0,10"
+                            Content="Exclude Xbox 360 Games"
+                            IsChecked="{Binding ViewModel.ExcludeXbox360Games, Mode=TwoWay}" />
                             <ui:Button
                             x:Name="ExportButton"
                             IsEnabled="{Binding ViewModel.IsInitialized}"
                             Content="Export Games to CSV"
                             Icon="{ui:SymbolIcon Save24}"
                             Click="ExportToCsvButton_Click"/>
-                            
                         </StackPanel>
                     </StackPanel>
                 </Grid>
