Add XboxAuthNet library for oauth login and token generation

--- a/XAU/Views/Pages/HomePage.xaml
+++ b/XAU/Views/Pages/HomePage.xaml
@@ -137,6 +137,13 @@
         <ui:Button
             HorizontalAlignment="Right"
             VerticalAlignment="Top"
+            Padding="17, 5, 17, 5"
+            Content="{Binding ViewModel.LoginText, Mode=OneWay}"
+            Command="{Binding ViewModel.OAuthLoginCommand, Mode=OneWay}"/>
+        <ui:Button
+            HorizontalAlignment="Right"
+            VerticalAlignment="Top"
+            Margin="0, 35, 0, 0"
             Content="Refresh"
             IsEnabled="{Binding ViewModel.IsLoggedIn, Mode=OneWay}"
             Command="{Binding ViewModel.RefreshProfileCommand, Mode=OneWay}"/>
