Update MiscPage.xaml  - changed design and new combo box
added combo box for api selection. Also major UI change cuz the old one was boring.

--- a/XAU/Views/Pages/MiscPage.xaml
+++ b/XAU/Views/Pages/MiscPage.xaml
@@ -28,36 +28,53 @@
                         <TextBlock Text="Spoofer" />
                     </StackPanel>
                 </TabItem.Header>
-                <Grid>
+                <Grid Margin="10">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="2*" />
+                        <ColumnDefinition Width="3*" />
                     </Grid.ColumnDefinitions>
-                    <TextBlock Margin="0"  Text="{Binding ViewModel.SpoofingText}"/>
-                    <Button Grid.Row="0" Grid.Column="1" Content="{Binding ViewModel.SpoofingButtonText, IsAsync=true}" HorizontalAlignment="Stretch" Command="{Binding ViewModel.SpooferButtonClickedCommand}" IsEnabled="{Binding ViewModel.IsInitialized}"/>
-                    <ui:TextBox Grid.Row="1" Grid.Column="1" VerticalAlignment="Top" Margin="0,5,0,0" PlaceholderText="Title ID" Text="{Binding ViewModel.NewSpoofingID, Mode=TwoWay}"/>
-                    <ui:Image 
-                        Grid.Row="1"
-                        Grid.Column="0"
-                        Source="{Binding ViewModel.GameImage}"
-                        Height="250"
-                        Width="250"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                    ></ui:Image>
-                    <Label Grid.Row="1" Grid.Column="0" Content="{Binding ViewModel.GameName}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="260,0,0,0" />
-                    <Label Grid.Row="1" Grid.Column="0" Content="{Binding ViewModel.GameTitleID}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="260,20,0,0" />
-                    <Label Grid.Row="1" Grid.Column="0" Content="{Binding ViewModel.GamePFN}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="260,40,0,0" />
-                    <Label Grid.Row="1" Grid.Column="0" Content="{Binding ViewModel.GameType}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="260,60,0,0" />
-                    <Label Grid.Row="1" Grid.Column="0" Content="{Binding ViewModel.GameGamepass}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="260,80,0,0" />
-                    <Label Grid.Row="1" Grid.Column="0" Content="{Binding ViewModel.GameDevices}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="260,100,0,0" />
-                    <Label Grid.Row="1" Grid.Column="0" Content="{Binding ViewModel.GameGamerscore}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="260,120,0,0" />
-                    <Label Grid.Row="1" Grid.Column="0" Content="{Binding ViewModel.GameTime}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="260,140,0,0" />
 
+                    <GroupBox Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Header="Spoofing Controls" Margin="0,0,10,0">
+                        <StackPanel Margin="10">
+                            <TextBlock Margin="0" Text="{Binding ViewModel.SpoofingText}" />
+                            <ui:TextBox 
+                    VerticalAlignment="Top" 
+                    Margin="0,5,0,0" 
+                    PlaceholderText="Title ID" 
+                    Text="{Binding ViewModel.NewSpoofingID, Mode=TwoWay}" />
+                            <ui:Button 
+                    Content="{Binding ViewModel.SpoofingButtonText, IsAsync=true}" 
+                    HorizontalAlignment="Stretch" 
+                    Command="{Binding ViewModel.SpooferButtonClickedCommand}" 
+                    IsEnabled="{Binding ViewModel.IsInitialized}" 
+                    Margin="0,10,0,0" />
+                        </StackPanel>
+                    </GroupBox>
+
+                    <GroupBox Grid.Row="1" Grid.Column="1" Header="Game Information" Margin="0,0,0,0">
+                        <StackPanel Margin="10">
+                            <ui:Image 
+                    Source="{Binding ViewModel.GameImage}" 
+                    Height="150" 
+                    Width="150" 
+                    HorizontalAlignment="Center" 
+                    VerticalAlignment="Top" 
+                    Margin="0,0,0,10" />
+                            <TextBlock Text="Game Details" FontWeight="Bold" Margin="0,0,0,5" />
+                            <TextBlock Text="{Binding ViewModel.GameName}" Margin="0,0,0,5" />
+                            <TextBlock Text="{Binding ViewModel.GameTitleID}" Margin="0,0,0,5" />
+                            <TextBlock Text="{Binding ViewModel.GamePFN}" Margin="0,0,0,5" />
+                            <TextBlock Text="{Binding ViewModel.GameType}" Margin="0,0,0,5" />
+                            <TextBlock Text="{Binding ViewModel.GameGamepass}" Margin="0,0,0,5" />
+                            <TextBlock Text="{Binding ViewModel.GameDevices}" Margin="0,0,0,5" />
+                            <TextBlock Text="{Binding ViewModel.GameGamerscore}" Margin="0,0,0,5" />
+                            <TextBlock Text="{Binding ViewModel.GameTime}" Margin="0,0,0,5" />
+                        </StackPanel>
+                    </GroupBox>
                 </Grid>
             </TabItem>
 
@@ -68,65 +85,69 @@
                         <TextBlock Text="Title ID Search" />
                     </StackPanel>
                 </TabItem.Header>
-                <Grid>
+                <Grid Margin="10">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto" />
-                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="2*" />
+                        <ColumnDefinition Width="3*" />
                     </Grid.ColumnDefinitions>
-                    <ui:Button
-                        Grid.Row="0"
-                        Grid.Column="0"
-                        Icon="{ui:SymbolIcon Search24}"
-                        HorizontalAlignment="Right"
-                        VerticalAlignment="Stretch"
-                        Margin="25,0,0,0"
-                        Command="{Binding ViewModel.SearchGameCommand}"></ui:Button>
-                    <ui:TextBox
+
+                    <GroupBox Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Header="Game Information" Margin="0,0,10,0">
+                        <StackPanel Margin="10">
+                            <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="0,0,0,10">
+                                <ui:TextBox
                         x:Name="TitleIdSearchBox"
-                        Grid.Row="0"
-                        Grid.Column="0"
                         VerticalAlignment="Top"
-                        Margin="0,0,40,0"
+                        Margin="0,0,10,0"
                         ClearButtonEnabled="False"
-                        PlaceholderText="Game"
+                        PlaceholderText="Search Game Name"
                         MinWidth="200"
                         Text="{Binding ViewModel.TSearchText, Mode=TwoWay}"
-                        KeyDown="TitleIDSearch_OnKeyDown"></ui:TextBox>
-                    <ListBox
-                        Grid.Row="1"
-                        Grid.Column="0"
-                        Margin="0,5,0,0"
-                        ItemsSource="{Binding ViewModel.TSearchGameNames}"
+                        KeyDown="TitleIDSearch_OnKeyDown" />
+                                <ui:Button
+                        Content="Search"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Top"
-                        SelectionChanged="Selector_OnSelectionChanged"></ListBox>
-                    <Label
-                        Grid.Row="1"
-                        Grid.Column="1"
-                        Content="{Binding ViewModel.TSearchGameName}"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        Margin="5,5,0,0"></Label>
-                    <Label
-                        Grid.Row="1"
-                        Grid.Column="1"
-                        Content="Title ID: "
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        Margin="5,35,0,0"></Label>
-                    <ui:TextBox
-                        Grid.Row="1"
-                        Grid.Column="1"
-                        VerticalAlignment="Top"
-                        HorizontalAlignment="Left"
-                        Margin="55,27,0,0"
-                        PlaceholderText="Title ID"
-                        Text="{Binding ViewModel.TSearchGameTitleID, Mode=TwoWay}"></ui:TextBox>
+                        Command="{Binding ViewModel.SearchGameCommand}" />
+                            </StackPanel>
 
+                            <TextBlock Text="Search From" FontWeight="Bold" Margin="0,0,0,5" />
+                            <ComboBox 
+                    ItemsSource="{Binding ViewModel.ApiOptions}" 
+                    SelectedItem="{Binding ViewModel.SelectedApi}"
+                    SelectionChanged="GamesApi_SelectionChanged"
+                    MinWidth="200" 
+                    Margin="0,0,0,10" 
+                    VerticalAlignment="Top"
+                    HorizontalAlignment="Left" />
+
+                            <TextBlock Text="Name:" FontWeight="Bold" Margin="0,0,0,5" />
+                            <TextBox
+                    Text="{Binding ViewModel.TSearchGameName, Mode=TwoWay}"
+                    IsReadOnly="True"
+                    Margin="0,0,0,10"
+                    BorderThickness="0" />
+
+                            <TextBlock Text="Title ID:" FontWeight="Bold" Margin="0,0,0,5" />
+                            <TextBox
+                    Text="{Binding ViewModel.TSearchGameTitleID, Mode=TwoWay}"
+                    IsReadOnly="True"
+                    Margin="0,0,0,10"
+                    BorderThickness="0" />
+                        </StackPanel>
+                    </GroupBox>
+
+                    <GroupBox Grid.Row="1" Grid.Column="1" Header="Search Results" Margin="0,0,0,0">
+                        <ListBox
+                Margin="10"
+                ItemsSource="{Binding ViewModel.TSearchGameNames}"
+                SelectionChanged="Selector_OnSelectionChanged"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Stretch" />
+                    </GroupBox>
                 </Grid>
             </TabItem>
 
@@ -137,76 +158,80 @@
                         <TextBlock Text="Gamertag Search" />
                     </StackPanel>
                 </TabItem.Header>
-                <Grid>
+                <Grid Margin="10">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto" />
-                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="2*" />
+                        <ColumnDefinition Width="3*" />
                     </Grid.ColumnDefinitions>
-                    <ui:Button
-                       Grid.Row="0"
-                       Grid.Column="0"
-                       Icon="{ui:SymbolIcon Search24}"
-                       HorizontalAlignment="Right"
-                       VerticalAlignment="Stretch"
-                       Margin="25,0,0,0"
-                       IsEnabled="{Binding ViewModel.IsInitialized}"
-                       Command="{Binding ViewModel.SearchGamertagCommand}"></ui:Button>
-                                        <ui:TextBox
-                       x:Name="GamertagSearchBox"
-                       Grid.Row="0"
-                       Grid.Column="0"
-                       VerticalAlignment="Top"
-                       Margin="0,0,40,0"
-                       ClearButtonEnabled="False"
-                       PlaceholderText="Gamertag"
-                       MinWidth="200"
-                       Text="{Binding ViewModel.Gamertag, Mode=TwoWay}"
-                       KeyDown="GamertagSearch_OnKeyDown" ></ui:TextBox>
-                        <StackPanel
-                       Grid.Row="1"
-                       Grid.Column="0"
-                       Margin="0,5,0,0"
-                       Orientation="Horizontal"
-                       HorizontalAlignment="Left"
-                       VerticalAlignment="Top">
-                                    <Image
-                           Source="{Binding ViewModel.GamertagImage}"
-                           Height="100"
-                           Width="100"
-                           Margin="5,0,10,0"></Image>
-                        <StackPanel>
-                            <Label Content="{Binding ViewModel.GamertagName}" Margin="0,0,0,5" />
-                            <Label Content="{Binding ViewModel.GamertagScore}" Margin="0,0,0,5" />
-                            <TextBlock Text="XUID: " VerticalAlignment="Center" Margin="0,0,5,0" />
-                            <TextBox Text="{Binding ViewModel.GamertagXuid, Mode=OneWay}" Margin="0,0,0,5" IsReadOnly="True" />
-                            <ui:ToggleSwitch
-                            x:Name="ExcludeZeroGamerscoreToggle"
-                            Grid.Row="0"
-                            Grid.Column="0"
-                            Margin="0,10,0,10"
-                            Content="Exclude 0 Gamerscore Games"
-                            IsChecked="{Binding ViewModel.ExcludeZeroGamerscoreGames, Mode=TwoWay}" />
-                            <ui:ToggleSwitch
-                            x:Name="ExcludeXbox360GamesToggle"
-                            Grid.Row="0"
-                            Grid.Column="0"
-                            Margin="0,5,0,10"
-                            Content="Exclude Xbox 360 Games"
-                            IsChecked="{Binding ViewModel.ExcludeXbox360Games, Mode=TwoWay}" />
+
+
+                    <GroupBox Grid.Row="0" Grid.Column="0" Header="Search Gamertag" Margin="0,0,10,0" VerticalAlignment="Stretch">
+                        <StackPanel Margin="10">
+                            <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="0,0,0,10">
+                                <ui:TextBox
+                        x:Name="GamertagSearchBox"
+                        VerticalAlignment="Top"
+                        Margin="0,0,10,0"
+                        ClearButtonEnabled="False"
+                        PlaceholderText="Gamertag"
+                        MinWidth="200"
+                        Text="{Binding ViewModel.Gamertag, Mode=TwoWay}"
+                        KeyDown="GamertagSearch_OnKeyDown" />
+                                <ui:Button
+                        Content="Search"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Top"
+                        Command="{Binding ViewModel.SearchGamertagCommand}"
+                        IsEnabled="{Binding ViewModel.IsInitialized}" />
+                            </StackPanel>
+                            <TextBlock Text="Search Settings" FontWeight="Bold" Margin="0,0,0,5" />
+                            <StackPanel>
+                                <ui:ToggleSwitch
+                        x:Name="ExcludeZeroGamerscoreToggle"
+                        Margin="0,0,0,10"
+                        Content="Exclude 0 Gamerscore Games"
+                        IsChecked="{Binding ViewModel.ExcludeZeroGamerscoreGames, Mode=TwoWay}" />
+                                <ui:ToggleSwitch
+                        x:Name="ExcludeXbox360GamesToggle"
+                        Margin="0,0,0,10"
+                        Content="Exclude Xbox 360 Games"
+                        IsChecked="{Binding ViewModel.ExcludeXbox360Games, Mode=TwoWay}" />
+                            </StackPanel>
                             <ui:Button
-                            x:Name="ExportButton"
-                            IsEnabled="{Binding ViewModel.IsInitialized}"
-                            Content="Export Games to CSV"
-                            Icon="{ui:SymbolIcon Save24}"
-                            Click="ExportToCsvButton_Click"/>
+                    x:Name="ExportButton"
+                    IsEnabled="{Binding ViewModel.IsInitialized}"
+                    Content="Export Games to CSV"
+                    Icon="{ui:SymbolIcon Save24}"
+                    Margin="0,10,0,0"
+                    Click="ExportToCsvButton_Click"/>
                         </StackPanel>
-                    </StackPanel>
+                    </GroupBox>
+                    <GroupBox Grid.Row="0" Grid.Column="1" Header="Gamertag Information" Margin="0,0,0,0" VerticalAlignment="Stretch">
+                        <StackPanel Margin="10">
+                            <Image
+                    Source="{Binding ViewModel.GamertagImage}"
+                    Height="100"
+                    Width="100"
+                    Margin="0,0,0,10" />
+
+                            <StackPanel>
+                                <TextBlock Text="{Binding ViewModel.GamertagName}" FontWeight="Bold" Margin="0,0,0,5" />
+                                <TextBlock Text="{Binding ViewModel.GamertagScore}" Margin="0,0,0,5" />
+                                <TextBlock Text="XUID:" FontWeight="Bold" VerticalAlignment="Center" Margin="0,0,5,0" />
+                                <TextBox Text="{Binding ViewModel.GamertagXuid, Mode=OneWay}" 
+                                         Margin="0,0,0,5" 
+                                         IsReadOnly="True" 
+                                         BorderThickness="0" />
+                            </StackPanel>
+                        </StackPanel>
+                    </GroupBox>
                 </Grid>
             </TabItem>
+
         </TabControl>
 
     </Grid>
